# WindowsContextMenus

./: .flake8  .gitignore  Design.vsdx  Dockerfile  README.md  main.py  main_api.py  main_frontend.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/build-docs/: action.yml
.github/actions/build-package/: action.yml
.github/actions/deploy-package/: action.yml
.github/actions/lint/: action.yml
.github/workflows/: ci-cd.yml  create-new-version.yml  new-version.yml
context_menu_sdk/: context_menu.py
context_menu_sdk/comparers/: __init__.py  contains.py  dos_wildcard.py  ends_with.py  equal.py  greater_than.py  greater_than_equal.py  less_than.py  less_than_equal.py  not_equal.py  starts_with.py
context_menu_sdk/conditions/: __init__.py  custom_condition.py  extension_type.py  file_name.py  file_size.py
context_menu_sdk/configuration/: comparers.py  custom_types.py  menu_builder.py  models.py
context_menu_sdk/features/: __init__.py  command.py  conditionfeature.py  disabled.py  entry_name.py  icon_feature.py  ifeature.py  mui_verb.py  never_default.py  no_working_directory.py  shift_click.py  sub_commands.py
context_menu_sdk/registry_interaction/: apply_context_menu.py
context_menu_sdk/registry_structs/: __init__.py  registry_key.py  registry_value.py
context_menu_toolkit/: __init__.py  context_menu.py  context_menu_bindings.py  context_menu_compiler.py  context_menu_locations.py  register_custom_filetype.py
context_menu_toolkit/comparers/: contains.py  dos_wildcard.py  ends_with.py  equal.py  greater_than.py  greater_than_equal.py  icomparer.py  less_than.py  less_than_equal.py  not_equal.py  starts_with.py
context_menu_toolkit/conditions/: __init__.py  comparison_type.py  custom_condition.py  extension_type.py  file_name.py  file_size.py
context_menu_toolkit/features/: __init__.py  aqs_condition.py  command.py  condition.py  conditionfeature.py  disabled.py  display_text.py  entry_name.py  has_lua_shield.py  icon.py  icon_feature.py  ifeature.py  mui_verb.py  never_default.py  no_working_directory.py  note.py  position.py  selection_model.py  separator.py  shift_click.py  sub_commands.py
context_menu_toolkit/models/: access_scope.py  command_placeholder.py  condition_comparisons.py  conditions.py  context_menu.py  explorer_items.py  icons.py
context_menu_toolkit/registry/: registry_handler.py  registry_interaction.py
context_menu_toolkit/registry_interaction/: __init__.py  apply_context_menu.py  registry_location.py
context_menu_toolkit/registry_structs/: __init__.py  registry_key.py  registry_path.py  registry_value.py
docs/: about.md  all_conditions.md  all_features.md  design.mmd  index.md  registry_key.md  registry_structs.md  registry_value.md
docs/context_menu/: context_menu.md
docs/context_menu_bindings/: access_scope.md  bindings.md  explorer_item_type.md  menu_item_type.md
docs/features/: command.md  disabled.md  display_text.md  entry_name.md  has_lua_shield.md  icon.md  ifeature.md  index.md  mui_verb.md  no_working_directory.md  note.md  position.md  selection_model.md  separator.md  shift_click.md
docs/javascripts/: katex.js
docs/registry_structures/: registry_key.md  registry_path.md  registry_value.md
examples/capabilities_example/: example.py
examples/convert_audio/: apply_menu.py
examples/convert_image/: apply_menu.py  convert_image.py
examples/convert_video/: resolution_menu.py  speed_menu.py  video_menu.py  volume_menu.py
src/: context_menu.py  context_menu_locations.py  location.py  registry_location.py
src/api/: comparers.py  make_reg_file.py  menu_builder.py  models.py  poc.json  poc.yaml
src/comparers/: __init__.py  contains.py  dos_wildcard.py  ends_with.py  equal.py  greater_than.py  greater_than_equal.py  icomparer.py  less_than.py  less_than_equal.py  not_equal.py  starts_with.py
src/conditions/: __init__.py  custom_condition.py  date_accessed.py  date_created.py  date_modified.py  extension_type.py  file_name.py  file_size.py  icondition.py
src/configuration/: comparers.py  menu_builder.py  models.py
src/exceptions/: __init__.py  base_exception.py  path_errors.py
src/features/: __init__.py  command.py  condition.py  conditionfeature.py  disable.py  disabled.py  entry_name.py  icon_feature.py  ifeature.py  mui_verb.py  never_default.py  no_working_directory.py  shift_click.py  sub_commands.py
src/frontend/: __init__.py  convert_to_api.py  models.py
src/operators/: __init__.py  contains.py  dos_wildcard.py  ends_with.py  equal.py  greater_than.py  greater_than_equal.py  ioperator.py  less_than.py  less_than_equal.py  not_equal.py  starts_with.py
src/registry_building_blocks/: registry_key.py  registry_value.py
src/registry_interaction/: __init__.py  apply_context_menu.py  export_as_regfile.py  registry_location.py
src/registry_structs/: __init__.py  registry_key.py  registry_value.py
tests/: test_basic_exporting.py  test_nothing.py
tests/registry_path/: test_registry_path.py
(+54 files in other folders)
