[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context_menu_toolkit"
readme = """
# Tool for creating Windows Context Menus!
"""
version = "0.0.6"
authors = [
  { name="Ori Shamir", email="orishamir04@gmail.com" },
]
description = "Create windows context menus Pythonically"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
license = "MIT"

dependencies = [
    "pydantic==2.*",
    "fastapi",
    "uvicorn",
]

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "griffe_pydantic",
]
test = [
    "pytest",
    "parameterized",
]

[project.urls]
Homepage = "https://github.com/orishamir/WindowsContextMenus"